force-app/main/default/objects/Medicine_Used__c/Medicine_Used__c.object-meta.xml
<CustomObject>
    <description>[Animal Shelter Starter] Stores details about medicines which have been given to an animal.</description>
    <label>Medicine Used</label>
    <nameField>
        <displayFormat>MEDUSD{00000}</displayFormat>
        <label>Medicines Used Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medicines Used</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>