force-app/main/default/objects/Medicine_Used__c/fields/Batch_No__c.field-meta.xml
<CustomField>
    <fullName>Batch_No__c</fullName>
    <description>The Batch No. of the Medicine Administered</description>
    <label>Batch No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>