force-app/main/default/objects/Medicine_Used__c/fields/Date_Time_Used__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Used__c</fullName>
    <inlineHelpText>The Date and Time the Medicine was used</inlineHelpText>
    <label>Date/Time Used</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>