force-app/main/default/objects/Medicine_Used__c/fields/Medicine_Name__c.field-meta.xml
<CustomField>
    <fullName>Medicine_Name__c</fullName>
    <formula>Medicine_Used__r.Medicine_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medicine Name</label>
    <type>Text</type>
</CustomField>