force-app/main/default/objects/Medicine_Used__c/fields/Medicine_Used__c.field-meta.xml
<CustomField>
    <fullName>Medicine_Used__c</fullName>
    <inlineHelpText>The Medicine that was used in the Treatment</inlineHelpText>
    <label>Medicine Used</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Medicine__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Medicine__c</referenceTo>
    <relationshipLabel>Medicines Used</relationshipLabel>
    <relationshipName>Medicines_Used</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>