force-app/main/default/objects/Medicine_Used__c/fields/Qty_Measure__c.field-meta.xml
<CustomField>
    <fullName>Qty_Measure__c</fullName>
    <inlineHelpText>The measure of the quantity used</inlineHelpText>
    <label>Qty Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>millilitres</fullName>
            </value>
            <value>
                <fullName>No Of Tablets</fullName>
            </value>
            <value>
                <fullName>grams</fullName>
            </value>
            <value>
                <fullName>centilitres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>