force-app/main/default/objects/Medicine_Used__c/fields/Qty_Used__c.field-meta.xml
<CustomField>
    <fullName>Qty_Used__c</fullName>
    <inlineHelpText>The quantity used, please select the relevant measure</inlineHelpText>
    <label>Qty Used</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>