force-app/main/default/objects/Medicine_Used__c/fields/Treatment_Used_In__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Used_In__c</fullName>
    <inlineHelpText>The Treatment the Medicine is used in</inlineHelpText>
    <label>Treatment Used In</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Animal_Action__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Treatment</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Animal_Action__c</referenceTo>
    <relationshipLabel>Medicines Used</relationshipLabel>
    <relationshipName>Medicines_Used</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>